k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: insight-healthcare
  labels:
    app: insight-healthcare
